# Periwinkle

./: .gitignore  .gitmodules  CMakeLists.txt  Periwinkle.sln  README.md  generate.bat
Periwinkle/: CMakeLists.txt  Periwinkle.vcxproj  Periwinkle.vcxproj.filters
Periwinkle/src/: Periwinkle.h
Periwinkle/src/Periwinkle/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
bin-int/Debug-x64/Periwinkle/: Periwinkle.dll.recipe  vc142.idb
bin-int/Debug-x64/Periwinkle/Periwinkle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Periwinkle.lastbuildstate  Periwinkle.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  vc142.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
